# Naukri-Mitra

./: app.py  changelog.md  contributing.md  pyproject.toml  readme.md  report.md  requirements.txt
.gitlab/issue_templates/: Bug.md
.gitlab/issue_templates/merge_request_templates/: Default.md
