[project]
name = "NaukriMitra"
version = "1.0.0"
description = "An AI-powered career assistant for resume analysis and interview preparation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "streamlit",
    "pdfplumber",
    "transformers",
    "torch",
    "sentencepiece",
    "accelerate"
]